Alignment - prevent critter's knee from being cut by glass panel

--- a/_scss/pages/_home.scss
+++ b/_scss/pages/_home.scss
@@ -122,7 +122,7 @@ body#home {
 
       figure {
         background: url("/assets/img/brands/blister_critters/critter-scartail-flipped-transparent.png"), linear-gradient(120deg, transparent 0%, transparent 68%,black 100%) no-repeat;
-        background-position: center top;
+        background-position: left top;
         background-size: cover;
         height: inherit;
         align-self: stretch;
